ci: try to enable AOT cache